<resources>
    <string name="app_name">Резюме</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">Алла Глушинская</string>
    <string name="nav_header_subtitle">графический дизайнер</string>
    <string name="nav_header_desc">моя фотография</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_about">Обо мне</string>
    <string name="menu_education">Образование</string>
    <string name="menu_experience">Опыт работы</string>
    <string name="menu_portfolio">Портфолио</string>
    <string name="menu_contacts">Обратная связь</string>
    <string name="error">Поле не должно оставаться пустым</string>
</resources>
